deployment/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: baggage-ops
  labels:
    app: swedavia-baggage
    env: production
